k8s/nv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hikma-health-backend-nv
  name: hikma-health-backend-nv
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hikma-health-backend-nv
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hikma-health-backend-nv
    spec:
      containers:
      - image: gcr.io/uplifted-agency-369506/hikma-health-backend:b7dfc8ee2709415954eb268155eefb6b8445b15f
        imagePullPolicy: IfNotPresent
        name: hikma-health-backend
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          - containerPort: 8080
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
